  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, jaclark5

 * 2.6.0

Fixes
  * Fix deletion of bond/angle/dihedral types (PR #4003, Issue #4001)
  * CRD, PQR, and PDBQT writers now write BZ2 and GZ files if requested
    (PR #4163, Issue #4159)

Enhancements

Changes
  * As per NEP29 the minimum supported version has been raised to 1.22. We
    have opted to pin to a minimum of 1.22.3 to avoid known issues on some
    platforms.
  * GSD is no longer a core dependency of MDAnalysis. It must be installed
    independently if you wish to read HOOMD trajectory files.
    (PR #4174, Issue #3819)

Deprecations
  * MDAnalysis no longer officially supports 32 bit installations (they are
    no longer tested in our continuous integration pipelines). Note: whilst
    no code changes have been made to disable 32 bit, although it is known that
    new versions of most MDAnalysis core dependencies no longer release
    32 bit compatible versions. (Issue #3858, PR #4176)


05/28/23 IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
         ooprathamm, MeetB7, BFedder, v-parmar, MoSchaeffler, jbarnoud, jandom,
         xhgchen, jaclark5, DrDomenicoMarson, AHMED-salah00, schlaicha,
         SophiaRuan, g2707, p-j-smith, tylerjereddy, xiki-tempula, richardjgowers,
         cbouy

 * 2.5.0

Fixes
  * Fixed ChainReader performing transformations correctly across boundaries in the individual trajectories
    (Issue #3657 #4008 PR #3906)
  * Fix the `heavy` distance_type for water bridge analysis where distance
    is not correctly assigned when more than one hydrogen is bonded to a
    heavy atom (Issue #4040, PR #4066).
  * PDB topology parser no longer fails when encountering unknown formal
    charges and instead simply does not populate attribute (Issue #4027)
  * Added support for Cython 3.0.0b2 (PR #4129)