@@ -1,0 +1,186 @@
+ITEM: TIMESTEP
+5
+ITEM: NUMBER OF ATOMS
+22
+ITEM: BOX BOUNDS pp pp pp
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+ITEM: ATOMS id mol type q xu yu zu
+4 0 2 0 5.82049 3.41718 0.258662
+10 0 2 0 5.06689 4.148 2.42599
+13 0 2 0 3.46588 5.87339 1.15172
+16 0 2 0 0.00662379 8.66565 0.187939
+22 0 2 0 1.63579 3.31896 4.95531
+11 0 2 0 3.41541 4.68252 3.60661
+1 0 1 0 5.2482 4.98721 5.43226
+2 0 1 0 4.9574 4.9727 4.47085
+14 0 2 0 6.60634 5.13405 6.14753
+19 0 2 0 7.29111 4.35383 5.26782
+20 0 2 0 7.03759 5.89064 5.48076
+15 0 2 0 4.21772 9.69606 5.30825
+21 0 2 0 4.18095 8.6087 4.97131
+6 0 2 0 8.19119 8.45419 4.57372
+18 0 2 0 1.17314 1.68628 8.00186
+3 0 2 0 3.43657 5.39233 8.80574
+9 0 2 0 5.12815 5.2267 8.60064
+5 0 2 0 6.58727 3.89175 9.53293
+7 0 2 0 7.60873 6.42905 9.68822
+8 0 2 0 6.86339 4.55856 6.98215
+17 0 2 0 9.28264 6.45054 7.12917
+12 0 2 0 7.19307 9.61778 7.43698
+ITEM: TIMESTEP
+6
+ITEM: NUMBER OF ATOMS
+22
+ITEM: BOX BOUNDS pp pp pp
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+ITEM: ATOMS id mol type q xu yu zu
+4 0 2 0 5.80802 3.41721 0.26033
+10 0 2 0 5.04074 4.14908 2.44053
+13 0 2 0 3.47398 5.88743 1.1758
+16 0 2 0 -0.00459111 8.65377 0.162823
+22 0 2 0 1.64483 3.31981 4.95081
+11 0 2 0 3.41365 4.6777 3.59557
+1 0 1 0 5.25992 4.98474 5.42653
+2 0 1 0 4.95174 4.97122 4.45619
+14 0 2 0 6.60185 5.16996 6.16913
+19 0 2 0 7.33123 4.3642 5.27408
+20 0 2 0 7.03795 5.88738 5.47956
+15 0 2 0 4.21652 9.70925 5.28851
+21 0 2 0 4.18277 8.61502 4.96236
+6 0 2 0 8.17419 8.45409 4.55326
+18 0 2 0 1.15536 1.68495 7.9951
+3 0 2 0 3.43337 5.3679 8.83099
+9 0 2 0 5.11459 5.21294 8.60921
+5 0 2 0 6.59289 3.87132 9.53146
+7 0 2 0 7.60598 6.4353 9.67943
+8 0 2 0 6.8596 4.56681 6.98327
+17 0 2 0 9.3039 6.43981 7.13925
+12 0 2 0 7.21605 9.61619 7.45223
+ITEM: TIMESTEP
+7
+ITEM: NUMBER OF ATOMS
+22
+ITEM: BOX BOUNDS pp pp pp
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+ITEM: ATOMS id mol type q xu yu zu
+4 0 2 0 5.79562 3.4173 0.261903
+10 0 2 0 5.0145 4.15018 2.45512
+13 0 2 0 3.48211 5.90149 1.19995
+16 0 2 0 -0.0158389 8.64186 0.137633
+22 0 2 0 1.65389 3.32066 4.94629
+11 0 2 0 3.41194 4.67287 3.58451
+1 0 1 0 5.27068 4.98223 5.41736
+2 0 1 0 4.94714 4.96978 4.44493
+14 0 2 0 6.597 5.20621 6.1901
+19 0 2 0 7.37133 4.37478 5.28052
+20 0 2 0 7.03842 5.8842 5.47816
+15 0 2 0 4.21532 9.72238 5.26869
+21 0 2 0 4.18461 8.62145 4.95342
+6 0 2 0 8.15714 8.45399 4.53274
+18 0 2 0 1.13753 1.68362 7.98832
+3 0 2 0 3.43021 5.34339 8.85631
+9 0 2 0 5.10096 5.19914 8.61781
+5 0 2 0 6.59842 3.85077 9.53009
+7 0 2 0 7.60322 6.44156 9.67061
+8 0 2 0 6.85602 4.57456 6.98507
+17 0 2 0 9.32523 6.42905 7.14936
+12 0 2 0 7.23909 9.6146 7.46752
+ITEM: TIMESTEP
+8
+ITEM: NUMBER OF ATOMS
+22
+ITEM: BOX BOUNDS pp pp pp
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+ITEM: ATOMS id mol type q xu yu zu
+4 0 2 0 5.78328 3.41747 0.263374
+10 0 2 0 4.98814 4.1513 2.46979
+13 0 2 0 3.49028 5.91562 1.2242
+16 0 2 0 -0.0271356 8.62989 0.112334
+22 0 2 0 1.663 3.32152 4.94174
+11 0 2 0 3.41027 4.66802 3.57342
+1 0 1 0 5.28003 4.97967 5.40346
+2 0 1 0 4.94408 4.96838 4.43834
+14 0 2 0 6.59174 5.24281 6.21061
+19 0 2 0 7.4115 4.38559 5.28712
+20 0 2 0 7.03906 5.88115 5.4765
+15 0 2 0 4.21411 9.73547 5.24876
+21 0 2 0 4.18645 8.628 4.94446
+6 0 2 0 8.14001 8.45389 4.51213
+18 0 2 0 1.11963 1.68228 7.98152
+3 0 2 0 3.4271 5.31878 8.88174
+9 0 2 0 5.08722 5.18528 8.62647
+5 0 2 0 6.60384 3.83008 9.52881
+7 0 2 0 7.60044 6.44784 9.66175
+8 0 2 0 6.85265 4.58182 6.98749
+17 0 2 0 9.34664 6.41824 7.15951
+12 0 2 0 7.26224 9.613 7.48288
+ITEM: TIMESTEP
+9
+ITEM: NUMBER OF ATOMS
+22
+ITEM: BOX BOUNDS pp pp pp
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+ITEM: ATOMS id mol type q xu yu zu
+4 0 2 0 5.771 3.4177 0.264737
+10 0 2 0 4.9616 4.15243 2.48456
+13 0 2 0 3.49849 5.92982 1.2486
+16 0 2 0 -0.0385029 8.61785 0.086878
+22 0 2 0 1.67216 3.32239 4.93717
+11 0 2 0 3.40863 4.66314 3.56226
+1 0 1 0 5.28808 4.97706 5.38536
+2 0 1 0 4.94242 4.96701 4.43585
+14 0 2 0 6.58603 5.27977 6.23089
+19 0 2 0 7.4518 4.39662 5.29387
+20 0 2 0 7.03991 5.87825 5.47449
+15 0 2 0 4.21289 9.74853 5.22867
+21 0 2 0 4.18831 8.63472 4.93548
+6 0 2 0 8.12277 8.45379 4.49139
+18 0 2 0 1.10161 1.68093 7.97467
+3 0 2 0 3.42402 5.29401 8.90732
+9 0 2 0 5.07335 5.17132 8.63518
+5 0 2 0 6.60916 3.8092 9.52764
+7 0 2 0 7.59765 6.45417 9.65284
+8 0 2 0 6.84947 4.58864 6.99047
+17 0 2 0 9.36818 6.40736 7.16973
+12 0 2 0 7.28552 9.61139 7.49833
+ITEM: TIMESTEP
+10
+ITEM: NUMBER OF ATOMS
+22
+ITEM: BOX BOUNDS pp pp pp
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+0.0000000000000000e+00 1.0000000000000000e+01
+ITEM: ATOMS id mol type q xu yu zu
+4 0 2 0 5.75876 3.41802 0.265988
+10 0 2 0 4.93482 4.15358 2.49947
+13 0 2 0 3.50678 5.94414 1.2732
+16 0 2 0 -0.0499635 8.60572 0.0612139
+22 0 2 0 1.68141 3.32326 4.93257
+11 0 2 0 3.40704 4.65822 3.55103
+1 0 1 0 5.29558 4.97443 5.36518
+2 0 1 0 4.94144 4.96564 4.4353
+14 0 2 0 6.57985 5.31706 6.25115
+19 0 2 0 7.49234 4.4079 5.30078
+20 0 2 0 7.041 5.87553 5.47208
+15 0 2 0 4.21165 9.76157 5.20839
+21 0 2 0 4.19018 8.64161 4.92646
+6 0 2 0 8.1054 8.45368 4.47049
+18 0 2 0 1.08345 1.67958 7.96777
+3 0 2 0 3.42098 5.26903 8.93311
+9 0 2 0 5.05932 5.15725 8.64398
+5 0 2 0 6.61438 3.78809 9.52658
+7 0 2 0 7.59483 6.46054 9.64385
+8 0 2 0 6.84642 4.59509 6.99388
+17 0 2 0 9.3899 6.39639 7.18003
+12 0 2 0 7.309 9.60977 7.51391
