@@ -1,0 +1,78 @@
+LAMMPS data file via write_data, version 30 Jul 2021, timestep = 0
+
+22 atoms
+2 atom types
+1 bonds
+1 bond types
+
+0 10 xlo xhi
+0 10 ylo yhi
+0 10 zlo zhi
+
+Masses
+
+1 1
+2 1
+
+Pair Coeffs # lj/cut
+
+1 1 1
+2 1 1
+
+Bond Coeffs # harmonic
+
+1 1000 1
+
+Atoms # full
+
+4 0 2 0 5.883740014805435 3.4179109354590804 0.24924286058641165 0 0 0
+10 0 2 0 5.197015196461036 4.142670556288421 2.353726151705203 0 0 0
+13 0 2 0 3.4255611285133267 5.803452070538761 1.031722991669274 0 0 0
+16 0 2 0 0.062476149254058554 8.724819406439591 0.31303480449240967 0 0 0
+22 0 2 0 1.5908211403175816 3.314754844382107 4.977739896776302 0 0 0
+11 0 2 0 3.424765092918008 4.706577781408797 3.661788275287658 0 0 0
+1 0 1 0 5.198991972049708 5.000151164651573 5.489469948645906 0 0 0
+2 0 1 0 4.977944755383636 4.979439231068392 4.515671261808374 0 0 0
+14 0 2 0 6.625473870892448 4.958741001742174 6.028090349925399 0 0 0
+19 0 2 0 7.0892589199131 4.3054178493503095 5.239481480901857 0 0 0
+20 0 2 0 7.036104530790973 5.906057579268762 5.486102918822923 0 0 0
+15 0 2 0 4.223656722003392 9.629493461794167 5.406260861415652 0 0 0
+21 0 2 0 4.171908135414807 8.578083005413488 5.016164227356318 0 0 0
+6 0 2 0 8.275867208937644 8.454650609100012 4.6756651150995525 0 0 0
+18 0 2 0 1.2616827540211895 1.6929043853399965 8.035498383807296 0 0 0
+3 0 2 0 3.4532547038183803 5.513947457637427 8.679969313168533 0 0 0
+9 0 2 0 5.195132811898448 5.29516718448986 8.55806411296179 0 0 0
+5 0 2 0 6.557959186170065 3.9928856347618593 9.541271333406879 0 0 0
+7 0 2 0 7.622424406139167 6.397902195984017 9.731973643509342 0 0 0
+8 0 2 0 6.885234927302157 4.511429989177588 6.9855314363826535 0 0 0
+17 0 2 0 9.17665431960683 6.503964175144789 7.078934920317938 0 0 0
+12 0 2 0 7.07862885024416 9.625664231829576 7.361010319462491 0 0 0
+
+Velocities
+
+4 -1.276660702504741 -0.026070411269423915 0.20108568802782487
+10 -2.5983566504504765 0.10526434391058373 1.442584513910767
+13 0.8050400413759953 1.398345394013117 2.398536219936858
+16 -1.1158865606286625 -1.1821133354613182 -2.499434382708754
+22 0.8980591872307232 0.08370783310298346 -0.44786472491418416
+11 -0.19695107307522597 -0.4814905381733622 -1.106304258876651
+1 0.7672584780901935 -0.27255549656041417 -1.8752091760718599
+2 -0.22113345674134757 -0.11908410141898773 -0.16990285243504102
+14 -0.3524431166553481 3.4510098598708447 2.546224330608433
+19 4.060319718410092 0.9206794154596835 0.5242942388931888
+20 0.039770587191395416 -0.2683837933674185 -0.11610400752187681
+15 -0.11842474401551648 1.336573059903346 -1.956240492935761
+21 0.18027081378915846 0.6053446724530571 -0.8984297600447511
+6 -1.6916803937384872 -0.008959901625246826 -2.0373059484516585
+18 -1.7692400294198856 -0.13234083957401252 -0.6721560749126162
+3 -0.3448513290315931 -2.428793821423444 2.5125747483397625
+9 -1.3303472717010782 -1.3667979529855936 0.8489569057185709
+5 0.6007884969188944 -2.01299620355339 -0.17850044666911968
+7 -0.2731151684439193 0.6231270095132168 -0.8738141678022208
+8 -0.46768519907928785 1.0002004184521291 -0.1650167734587818
+17 2.118599875619805 -1.0672456725498713 1.0039088013137925
+12 2.286668496859314 -0.15741993871647506 1.5181176200540754
+
+Bonds
+
+1 1 1 2
